# hackmd_note_manager

./: .gitignore  .pylintrc  README.md  app.py  pyproject.toml
note_data/: WIP_ 2022 Pre-CFP empty schedule.csv  test_data.json
note_template/pycon_apac_2022/: collabwriting.md  collabwriting_toc.md  collabwriting_toc_each_session.md  conference.md
src/api/program_collabwriting_2022/: app.py
src/collabwriting/: app.py
src/config/: config.py
src/utils/: csv_handler.py  hackmd_note.py  json_handler.py  log.py  note.py  note_template.py  program.py  program_collabwriting.py  url_processor.py
tests/utils/: test_url_processor.py
utils/: collabwriting.py  csv_handler.py  json_handler.py  note.py
